2022-01-27  Jonathan Bedard  <jbedard@apple.com>

        [EWS] Ignore hooks from closed PRs
        https://bugs.webkit.org/show_bug.cgi?id=235666
        <rdar://problem/88091611>

        Unreviewed follow-up fix.

        * CISupport/ews-build/events.py:
        (GitHubEventHandlerNoEdits.handle_pull_request): 'state' is a member of the 'pull_request' dictionary.

2022-01-27  Antti Koivisto  <antti@apple.com>

        Default to 32 bit refcount for CanMakeCheckedPtr
        https://bugs.webkit.org/show_bug.cgi?id=235723
        rdar://86602114

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WTF/CheckedPtr.cpp:
        (TestWebKitAPI::TEST):
        * TestWebKitAPI/Tests/WTF/CheckedRef.cpp:

2022-01-27  Elliott Williams  <emw@apple.com>

        [XCBuild] Add missing task dependencies on generate-unified-source-bundles.rb
        https://bugs.webkit.org/show_bug.cgi?id=235724

        Reviewed by Alexey Proskuryakov.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:

2022-01-27  Elliott Williams  <emw@apple.com>

        Generated xcfilelists contain symlinks when building for macOS
        https://bugs.webkit.org/show_bug.cgi?id=235663
        rdar://88054903

        Reviewed by Alexey Proskuryakov.

        * DumpRenderTree/mac/Configurations/Base.xcconfig:
        * TestWebKitAPI/Configurations/Base.xcconfig:
        * WebKitTestRunner/Configurations/Base.xcconfig:

2022-01-27  Wenson Hsieh  <wenson_hsieh@apple.com>

        ImageAnalysisQueue should prioritize elements that intersect the visible viewport
        https://bugs.webkit.org/show_bug.cgi?id=235664
        rdar://88131827

        Reviewed by Darin Adler.

        Add an API test to verify that batch image analysis prioritizes a visible image over another image that appears
        first in DOM traversal order, but is offscreen.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKitCocoa/ImageAnalysisTests.mm: